# daemon-gensyn

./: .gitignore  .vercelignore  OnboardWorker  README.md  Start  Stop  package-lock.json  summary.md  vercel.json
platform/: README.md  pyproject.toml
platform/daemon/: __init__.py  app.py  identity.py  keeperhub_client.py  service.py  state.py
platform/daemon/agents/: __init__.py  diagnoser.py  model_client.py  planner.py  prompts.py  reporter.py
platform/demo/: issue_operator_token.py  start_demo.sh  stop_demo.sh
platform/operator/: configure_firewall.sh  onboard_worker.sh  start_worker.sh  stop_worker.sh
platform/shared/: __init__.py  config.py  contracts.py
platform/shared/tasks/: __init__.py  api_call.py  base.py  browser_task.py  cdn_check.py  dns_check.py  http_check.py  latency_probe.py  ping_check.py  registry.py
platform/tests/: conftest.py  test_agentic.py  test_daemon_state.py  test_keeperhub_settlement.py  test_task_plugins.py
platform/web/: next.config.ts  package-lock.json  package.json
platform/web/app/: globals.css  layout.tsx  page.tsx
platform/web/app/activities/: page.tsx
platform/web/app/dashboard/: page.tsx
platform/web/components/: AppFrame.tsx  ConnectWallet.tsx  CopyableId.tsx  CreateJobForm.tsx  CreateLeaseForm.tsx  DaemonHealthPanel.tsx  IdentityBadge.tsx  JobActivityPanel.tsx  JobReportClient.tsx  LeaseActivityPanel.tsx  LeaseGantt.tsx  OperatorOnboardingClient.tsx  RegionHeatmap.tsx  RegionMultiSelect.tsx  useAuthSession.ts
platform/web/lib/: api.ts  auth.ts  base-sepolia.ts  clientApiBase.ts  zerog-galileo.ts
(+26 files in other folders)
