[project]
name = "nodehub"
version = "0.1.0"
description = "Local-first NodeHub daemons for WebOps execution on AXL"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.10.0",
    "eth-account>=0.13.4",
    "fastapi>=0.115.0",
    "httpx>=0.28.1",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.2",
    "uvicorn>=0.32.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["daemon", "shared"]
